--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -55,13 +55,6 @@
   						<li class="nav-item">
   							<a href="{% url 'post_draft_list' %}" class="nav-link">Drafts</a>
   						</li>
-  						<li class="nav-item">
-  							<a href="{% url 'logout' %}" class="nav-link">Logout</a>
-  						</li>
-					{% else %}
-						<li class="nav-item">
-  							<a href="{% url 'login' %}" class="nav-link">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i></a>
-  						</li>		
   					{% endif %}
   				</ul>
   			</div>
@@ -74,7 +67,7 @@
 			<div class="col-md-8">
 				<div class="blog_posts">
 					{% block content %}
-						
+									
 					{% endblock content %}
 				</div>
 			</div>		
@@ -82,7 +75,11 @@
 	</div>
 	<footer>
 		<div class="container">
-			<p>Footer</p>			
+			{% if user.is_authenticated %}
+				<a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>	
+			{% else %}
+				<a href="{% url 'login' %}" class="btn">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i>
+			{% endif %}			
 		</div>
 	</footer>
 	<!-- JS for Bootstrap -->
