--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -50,6 +50,9 @@
 				<ul class="navbar-nav">
   					{% if user.is_authenticated %}
   						<li class="nav-item">
+  							<span class="navbar-text">|</span>
+  						</li>
+  						<li class="nav-item">
   							<a href="{% url 'post_new' %}" class="nav-link">New Post</a>
   						</li>
   						<li class="nav-item">
