update post_form.html better whitespace on WYSIWYG

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,7 @@
 {% extends "blog/base.html" %}
-
+{% block titleblock %}
+About
+{% endblock titleblock %}
 {% block content %}
 <div class="jumbotron">
 <h1>About Me:</h1>
