--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,4 +1,7 @@
 {% extends "blog/base.html" %}
+{% block titleblock %}
+Comment
+{% endblock titleblock %}
 {% block content %}
 	
 	<h1>New Comment</h1>
