--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,1 +1,9 @@
 {% extends "blog/base.html" %}
+{% block titleblock %}
+Not Lost Not Found
+{% endblock titleblock %}
+{% block content %}
+	<div class="jumbotron">
+		
+	</div>
+{% endblock content %}
