--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,4 +1,7 @@
 {% extends "blog/base.html" %}
+{% block titleblock %}
+Delete Post
+{% endblock titleblock %}
 {% block content %}
 
 	<form method="POST">
