--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,4 +1,7 @@
 {% extends "blog/base.html" %}
+{% block titleblock %}
+Drafts
+{% endblock titleblock %}
 {% block content %}
 
 	{% for post in post_list %}
