--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -48,6 +48,10 @@ h1{
     border-left: 1px solid #f2f2f2;
 }
 
+.right-align{
+	float:right;
+}
+
 /*.btn-comment{
 	position: absolute;
 	right:0px;
