--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,6 +1,12 @@
 {% extends "blog/base.html" %}
+{% block titleblock %}
+New Post
+{% endblock titleblock %}
+{% block extrahead %}
+	<script>window.CKEDITOR_BASEPATH = '/static/ckeditor/ckeditor/';</script>
+	{{ block.super }}
+{% endblock %}
 {% block content %}
-	
 	<h1>New Post</h1>
 	<form method="POST" class="post-form">
 		{% csrf_token %}
@@ -9,6 +15,24 @@
 		<button type="submit" class="save btn btn-default">Save</button>
 	</form>
 
-	<script> var editor = new MediumEditor('.editable');</script>
+	<script type="text/javascript">
+		CKEDITOR.replace( 'id_text', {
+        on :
+        {
+            instanceReady : function( ev )
+            {
+                // Output paragraphs as <p>Text</p>.
+                this.dataProcessor.writer.setRules( 'p',
+                    {
+                        // indent : false,
+                        breakBeforeOpen : false,
+                        breakAfterOpen : false,
+                        breakBeforeClose : false,
+                        breakAfterClose :false
+                    });
+            }
+        }
+    });
+</script>
 
 {% endblock content %}
