--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block titleblock %}
+Posts
+{% endblock titleblock %}
 {% block content %}
 	<div class="centerstage">
 		{% for post in post_list %}
