--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -71,10 +71,11 @@
 	<footer>
 		<div class="container">
 			{% if user.is_authenticated %}
-				<a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>	
+				<a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>	
 			{% else %}
 				<a href="{% url 'login' %}" class="btn">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i>
-			{% endif %}			
+			{% endif %}
+			<p><i class="fa fa-copyright" aria-hidden="true"></i> 2017 All Rights Reserved</p>
 		</div>
 	</footer>
 	<!-- JS for Bootstrap -->
