--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -73,7 +73,7 @@
 			{% if user.is_authenticated %}
 				<a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>	
 			{% else %}
-				<a href="{% url 'login' %}" class="btn">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i>
+				<a href="{% url 'login' %}" class="btn">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i></a>
 			{% endif %}
 			<p><i class="fa fa-copyright" aria-hidden="true"></i> 2017 All Rights Reserved</p>
 		</div>
