--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -8,7 +8,7 @@ New Post
 {% endblock %}
 {% block content %}
 	<h1>New Post</h1>
-	<form method="POST" class="post-form" enctype="nultipart/form-data">
+	<form method="POST" class="post-form" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{ form.media }}
 		{{ form.as_p }}
