--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,10 +1,12 @@
 {% extends "blog/base.html" %}
+{% load staticfiles %}
 {% block titleblock %}
 New Post
 {% endblock titleblock %}
 {% block extrahead %}
 	<script>window.CKEDITOR_BASEPATH = '/static/ckeditor/ckeditor/';</script>
 	{{ block.super }}
+	<link rel="stylesheet" href="{% static 'plugins/alignment.css' %}">
 {% endblock %}
 {% block content %}
 	<h1>New Post</h1>
@@ -14,25 +16,4 @@ New Post
 		{{ form.as_p }}
 		<button type="submit" class="save btn btn-default">Save</button>
 	</form>
-
-	<script type="text/javascript">
-		CKEDITOR.replace( 'id_text', {
-        on :
-        {
-            instanceReady : function( ev )
-            {
-                // Output paragraphs as <p>Text</p>.
-                this.dataProcessor.writer.setRules( 'p',
-                    {
-                        // indent : false,
-                        breakBeforeOpen : false,
-                        breakAfterOpen : false,
-                        breakBeforeClose : false,
-                        breakAfterClose :false
-                    });
-            }
-        }
-    });
-</script>
-
 {% endblock content %}
