added feature banner

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,7 +8,7 @@
 	{% if post.feature %}
 		<img src="{{ post.feature.url }}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
 	{% else %}
-		<img src="{{ static 'img/header.png' }}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
+		<img src="{{ static 'img/header.jpg' }}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
 	{% endif %}
 	
 	<!-- Title/Author/Date content to display for each post -->
