add feature banner

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends "blog/base.html" %}
 {% load tz %}
+{% load static %}
 {% block titleblock %}
 {{ post.title|title }}
 {% endblock titleblock %}
