--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,15 @@
 {% extends "blog/base.html" %}
 {% load tz %}
-{% load static %}
+{% load staticfiles %}
 {% block titleblock %}
 {{ post.title|title }}
 {% endblock titleblock %}
 {% block content %}
 	<!-- Feature image to display in banner across top -->
-	{% if post.feature %}
+	{% if not post.feature %}
 		<img src="{{ post.feature.url }}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
 	{% else %}
-		<img src="{{ static 'img/header.jpg' }}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
+		<img src="{% static 'img/header.jpg' %}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
 	{% endif %}
 	
 	<!-- Title/Author/Date content to display for each post -->
