--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,7 @@
 {% endblock titleblock %}
 {% block content %}
 	<!-- Feature image to display in banner across top -->
-	{% if not post.feature %}
+	{% if post.feature %}
 		<img src="{{ post.feature.url }}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
 	{% else %}
 		<img src="{% static 'img/header.jpg' %}" alt="{{ post.title|title }} Featured Image" class="featureimage" />
