--- a/static/blog/css/blog.css
+++ b/static/blog/css/blog.css
@@ -11,6 +11,17 @@ footer{
 	background-color: gray;
 }
 
+.header{
+	background-image: 'static/img/header.jpg';
+	height:500px;
+	width:100%;
+
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
 .content{
 	background-color:red;
 }
@@ -55,8 +66,4 @@ footer{
     margin: 0 9px;
     border-right: 1px solid rgba(0,0,0,.5);
     border-left: 1px solid #f2f2f2;
-}
-
-.right-align{
-	float:right;
 }
