--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 	Posts
 {% endblock titleblock %}
 {% block content %}
-	<div class="centerstage">
+	<div class="container">
 		{% for post in post_list %}
 		{% if post.feature %}
 			<div class="post">
