--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -1,4 +1,6 @@
-{% load staticfiles %}
+html{
+	padding-top:70px;
+}
 body{
 	font-family: 'PT Sans', sans-serif;
 	background-color: #88BBD6;
@@ -16,7 +18,7 @@ footer p{
 }
 
 .header{
-	height:500px;
+	height:600px;
 	width:100%;
 	
 	background-attachment: fixed;
@@ -26,8 +28,21 @@ footer p{
 	top: 0;
 
 }
+
+.featureimage{
+	height:400px;
+	width:100%;
+	
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	top: 0;
+
+}
+
 .content{
-	background-color: #CDCDCD;
+	background-color: #E9E9E9;
 }
 
 .navbar{
@@ -50,11 +65,15 @@ footer p{
 	color: #FFFFFF !important;
 }
 
-.centerstage{
-	margin-left: auto;
-	margin-right: auto;
+.active>.nav-link{
+	color: #E9E9E9 !important;
 }
 
+.jumbotron{
+	background-color: #CDCDCD;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+}
 .postTitle{
 	font-family: 'Montserrat', sans-serif;
 	font-size: 2em;
@@ -84,4 +103,8 @@ footer p{
 
 .words{
 	text-align: justify;
+}
+
+.profile-pic{
+	
 }
