edit mobile parallax

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,7 +5,7 @@
 {% endblock titleblock %}
 {% block content %}
 	<div class="row">
-	<div class="header" style="background-image: url('{% static 'blog/img/header.jpg' %}')"></div>
+	<div class="header"></div>
 	</div>
 	<div class="container content">
 	<div class="jumbotron">
