--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -18,6 +18,7 @@ footer p{
 }
 
 .header{
+	background-image: url('/static/blog/img/header.jpg');
 	height:600px;
 	width:100%;
 	
@@ -39,6 +40,13 @@ footer p{
 	background-size: cover;
 	top: 0;
 
+}
+
+@media (max-width: 576px){
+	.header{
+		background-image: url('/static/blog/img/header_sm.jpg');
+		height: 200px;
+	}
 }
 
 .content{
