--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 	<!-- Navbar -->
-	<nav class="navbar navbar-toggleable-sm bg-faded navbar-light navfont custom-navbar">
+	<nav class="navbar navbar-toggleable-sm bg-faded navbar-light navfont custom-navbar sticky-top">
 		<div class="container">
 			<!-- Button for collapse and brand (Always visible elements) -->
  			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapseMe" aria-controls="collapseMe" aria-expanded="false" aria-label="Toggle navigation">
