--- a/static/blog/css/blog.css
+++ b/static/blog/css/blog.css
@@ -1,5 +1,6 @@
 body{
 	font-family: 'PT Sans', sans-serif;
+	background-color: #99D3DF;
 }
 
 h1{
@@ -8,22 +9,56 @@ h1{
 
 footer{
 	padding-top: 25px;
-	background-color: gray;
+}
+footer p{
+	font-size: .75em;
 }
 
-.header{
-	background-image: 'static/img/header.jpg';
-	height:500px;
-	width:100%;
+@media (min-width: 700px){
+	.header, .featureimage{
+		background-image: url('/static/blog/img/header.jpg');
+		height:600px;
+		width:100%;
+		
+		background-attachment: fixed;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		top: 0;
 
+	}
+}
+
+@media (max-width: 699px){
+	.header, .featureimage{
+		background-image: url('/static/blog/img/header_sm.jpg');
+		height: 250px;
+		width: 100%;
+
+		background-attachment: fixed;
+		background-position: top;
+		background-repeat: no-repeat;
+	}
+}
+
+.featureimage{
+	height:400px;
+	width:100%;
+	
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 
 }
+
 .content{
-	background-color:red;
+	background-color: #E9E9E9;
+}
+
+.navbar{
+	margin-bottom: 0 !important;
+	background-color: #99D3DF;
 }
 
 .navfont{
@@ -32,13 +67,23 @@ footer{
 	margin-bottom: 10px;
 }
 
-.bigbrand{
-	font-size: 1.5em;
+.nav-link{
+	color: #FFF !important;
 }
 
-.centerstage{
-	margin-left: auto;
-	margin-right: auto;
+.bigbrand{
+	font-size: 1.5em;
+	color: #FFFFFF !important;
+}
+
+.active>.nav-link{
+	color: #E9E9E9 !important;
+}
+
+.jumbotron{
+	background-color: #88BBD6;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
 }
 
 .postTitle{
@@ -64,6 +109,14 @@ footer{
 .divider-vertical {
     height: 50px;
     margin: 0 9px;
-    border-right: 1px solid rgba(0,0,0,.5);
-    border-left: 1px solid #f2f2f2;
+    border-right: 1px solid rgba(255,255,255,.5);
+    border-left: 1px solid #FFF;
+}
+
+.words{
+	text-align: justify;
+}
+
+.profile-pic{
+	
 }
