--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -9,6 +9,7 @@ h1{
 
 footer{
 	padding-top: 25px;
+	color: #FFF;
 }
 footer p{
 	font-size: .75em;
@@ -43,10 +44,10 @@ footer p{
 
 .featureimage{
 	height:400px;
-	width:100%;
 	
 	background-attachment: fixed;
 	background-position: center;
+	position: relative;
 	background-repeat: no-repeat;
 	background-size: cover;
 
@@ -113,10 +114,46 @@ footer p{
     border-left: 1px solid #FFF;
 }
 
-.words{
-	text-align: justify;
+.post-thumb{
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 2px
 }
 
-.profile-pic{
-	
+.post-thumb img{
+	width:100%;
+}
+.post-thumb a {
+	text-decoration: none;
+	color: black;
+}
+
+.index-post-title{
+	font-style: italic;
+}
+
+.index-post-comments{
+	font-size: .9em;
+}
+
+.social a{
+	color: #FFF;
+}
+
+.post tr{
+	height:300px;
+}
+
+.postImage{
+	height:150px;
+	width:150px;
+	overflow:hidden;
+}
+.feature-image{
+	width:100%;
+	height:100%;
+}
+
+.postDetail{
+	padding-left: 15px;
 }
