--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -69,13 +69,26 @@
 	{% endblock content %}
 	<footer>
 		<div class="container">
-			{% if user.is_authenticated %}
-				<a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>	
-			{% else %}
-				<a href="{% url 'login' %}" class="btn">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i></a>
-			{% endif %}
-			<p><i class="fa fa-copyright" aria-hidden="true"></i> 2017 All Rights Reserved<br />
-			Website Designed and Developed by Nathan New</p>
+			<div class="row">
+				<div class="col-10">
+				{% if user.is_authenticated %}
+					<a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>	
+				{% else %}
+					<a href="{% url 'login' %}" class="btn btn-primary">Log In <i class="fa fa-user fa-lg" aria-hidden="true"></i></a>
+				{% endif %}
+				</div>
+				<div class="col-2 social text-right">
+					<a href="https://www.facebook.com/carmen.wagster"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/@carmenmw/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="https://www.instagram.com/@carmenmw/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+				</div>
+				<div class="container">
+					<div class="row">
+							<p><i class="fa fa-copyright" aria-hidden="true"></i> 2017 All Rights Reserved<br />
+							Website Designed and Developed by Nathan New</p>	
+					</div>
+				</div>
+			</div>
 		</div>
 	</footer>
 	<!-- JS for Bootstrap -->
