remove facebok icon from footer

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -78,7 +78,7 @@
 				{% endif %}
 				</div>
 				<div class="col-2 social text-right">
-					<a href="https://www.facebook.com/carmen.wagster"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+{# 					<a href="https://www.facebook.com/carmen.wagster"><i class="fa fa-facebook" aria-hidden="true"></i></a> #}
 					<a href="https://twitter.com/@carmenmw/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 					<a href="https://www.instagram.com/@carmenmw/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 				</div>
